envoy_function_proxy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 10000 }
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              config:
                access_log:
                  - name: envoy.access_loggers.file
                    config:
                      path: "/dev/stdout"
                stat_prefix: ingress_http
                codec_type: AUTO
                route_config:
                  name: local_route
                  request_headers_to_add:
                    - header:
                        key: x-functions-key
                        value: x5QiqCRVWousfn8w9vRaxL6FqeyeqoksnDhctKq7ydejspS8biIgGA==
                  virtual_hosts:
                    - name: godaddy-function
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/godaddy"
                          route:
                            host_rewrite: godaddy-registration.azurewebsites.net
                            prefix_rewrite: "/api/registration"
                            cluster: godaddy-function
                http_filters:
                  - name: envoy.filters.http.router
  clusters:
    - name: godaddy-function
      connect_timeout: 60s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: godaddy-registration.azurewebsites.net|443
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: godaddy-registration.azurewebsites.net
                      port_value: 443
      transport_socket:
        name: envoy.transport_sockets.tls
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
          sni: godaddy-registration.azurewebsites.net
